--- a/2-angular-data-binding/src/app/components/property-binding/property-binding.component.html
+++ b/2-angular-data-binding/src/app/components/property-binding/property-binding.component.html
@@ -7,7 +7,7 @@
     <h1 [ngClass]="{special: isSpecial,'text-center': true,'text-white': true}">
       Using '[ngClass]' property binding
     </h1>
-    <h1 [class.special]="isSpecial" [style.color]="'white'">Using '[class.special]' [style.color] and  property binding</h1>
+    <h1 [class.special]="isSpecial" [style.color]="'white'">Using [class.special] and [style.color] property binding</h1>
   </div>
 </div>
 <hr />
