--- a/2-angular-data-binding/src/app/app.component.html
+++ b/2-angular-data-binding/src/app/app.component.html
@@ -3,4 +3,5 @@
   <app-property-binding></app-property-binding>
   <app-event-binding></app-event-binding>
   <app-two-way-binding></app-two-way-binding>
+  <app-parent></app-parent>
 </div>
