--- a/3-angular-directives/src/app/app.component.html
+++ b/3-angular-directives/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div class="container text-center m-5">
   <app-ngif></app-ngif>
+  <app-ngfor></app-ngfor>
+  <app-ngswitch></app-ngswitch>
 </div>
