--- a/3-angular-directives/src/app/components/structural-directives/ngif/ngif.component.html
+++ b/3-angular-directives/src/app/components/structural-directives/ngif/ngif.component.html
@@ -11,7 +11,7 @@
   </div>
 
   <div class="col-12">
-    <h1>Example 1 <span class="text-muted display-6">*ngIf="condition"</span></h1>
+    <h1>Example 1 :: <span class="text-muted display-6">*ngIf="condition"</span></h1>
     <div *ngIf="condition" class="text-white bg-dark">
       Content to render when condition is true.
     </div>
