--- a/3-angular-directives/src/app/app.component.html
+++ b/3-angular-directives/src/app/app.component.html
@@ -2,4 +2,7 @@
   <app-ngif></app-ngif>
   <app-ngfor></app-ngfor>
   <app-ngswitch></app-ngswitch>
+  <app-ngclass></app-ngclass>
+  <app-ngstyle></app-ngstyle>
+  <app-ngmodel></app-ngmodel>
 </div>
