--- a/3-angular-directives/src/app/components/attribute-directives/ngmodel/ngmodel.component.html
+++ b/3-angular-directives/src/app/components/attribute-directives/ngmodel/ngmodel.component.html
@@ -1,1 +1,15 @@
-<p>ngmodel works!</p>
+<div class="row">
+    <div class="col-12">
+      <h1 style="color: brown">NgModel</h1>
+      <p class="text-center text-muted">
+       
+      </p>
+    </div>
+  
+    <div class="col-12">
+      <h1>Example  <span class="text-muted display-6"></span></h1>
+
+      <br />
+  </div>
+  <hr />
+  
