--- a/3-angular-directives/src/app/components/attribute-directives/ngmodel/ngmodel.component.html
+++ b/3-angular-directives/src/app/components/attribute-directives/ngmodel/ngmodel.component.html
@@ -2,14 +2,35 @@
     <div class="col-12">
       <h1 style="color: brown">NgModel</h1>
       <p class="text-center text-muted">
-       
+        Adds two-way data binding to an HTML form element.
+        Use the NgModel directive to display a data property and update that property when the user makes changes.
       </p>
     </div>
   
     <div class="col-12">
-      <h1>Example  <span class="text-muted display-6"></span></h1>
-
+      <h1>
+        Example 1 :: <span class="text-muted display-6"></span>
+      </h1>
+      <input type="text" class="form-control" [(ngModel)]="message" />
       <br />
+    </div>
+    <div class="col-12">
+      <h1>{{ message }}</h1>
+    </div>
+    <br>
+    
+    <div class="col-12">
+      <h1>
+        Example 2 :: <span class="text-muted display-6">The expanded form, which separates the property and event binding using property binding to set the property and event binding to respond to changes</span>
+      </h1>
+      <input type="text" class="form-control" [ngModel]="message2" (ngModelChange)="change($event)" />
+      <br />
+    </div>
+    <div class="col-12">
+      <h1>{{ message2 }}</h1>
+    </div>
+    <br>
+
   </div>
   <hr />
   
