--- a/4-template-reference-variable/src/app/app.component.html
+++ b/4-template-reference-variable/src/app/app.component.html
@@ -42,5 +42,13 @@
     </div>
     <br>  
 
+    <div class="col-12" class="mt-3">
+      <h1>
+        Example 3 :: <span class="text-muted display-6">Using Component with template variables</span>
+      </h1>
+      <app-customer-list #customer></app-customer-list>
+      <h1>{{ customer.selectedCustomer.name }}</h1>
+
+    </div>
   </div>
 
