6-angular-view-encapsulation

--- a/6-angular-view-encapsulation/src/app/app.component.html
+++ b/6-angular-view-encapsulation/src/app/app.component.html
@@ -1,6 +1,12 @@
 
-<div class="container">
-  <p>App Component</p>
+<div class="container mt-3">
+  
+  <div class="row mb-3">
+    <div class="col-12 text-center">
+      <h1 style="color: brown">View Encapsulation</h1>
+      <p>App Component</p>
+    </div>
+  </div>
   <app-comp1></app-comp1>
   <app-comp2></app-comp2>
 </div>
