--- a/6-angular-view-encapsulation/src/app/app.component.html
+++ b/6-angular-view-encapsulation/src/app/app.component.html
@@ -1,7 +1,6 @@
 
 <div class="container mt-3">
-  
-  <div class="row mb-3">
+  <div class="row">
     <div class="col-12 text-center">
       <h1 style="color: brown">View Encapsulation</h1>
       <p>App Component</p>
