--- a/10-angular-custom-directives/src/app/app.component.html
+++ b/10-angular-custom-directives/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center mt-3">
+<div class="container text-center my-3">
   <div class="row">
     <div class="col-12 mb-3">
       <h1 style="color: brown">Custom Directives</h1>
