--- a/11-angular-ngtemplate/src/app/app.component.html
+++ b/11-angular-ngtemplate/src/app/app.component.html
@@ -20,7 +20,6 @@
           </p>
         </div>
       </ng-template>
-      <button class="btn btn-primary" type="button" (click)="display=true">Display</button>
       <br>
     </div>
 
@@ -48,12 +47,10 @@
           </p>
         </div>
       </ng-template>
-
-      <button class="btn btn-primary" type="button" (click)="display=true">Display</button>
       <br>
     </div>
 
-    <div class="col-12 mb-3">
+    <div class="col-12">
       <h1>
         Example 3 :: <span class="text-muted display-6"> Using *ngIf then else</span>
       </h1>
@@ -68,9 +65,10 @@
           Content to render when condition is false.
         </p>
       </ng-template>
-      <button class="btn btn-primary" type="button" (click)="display=true">Display</button>
       <br>
     </div>
-
+    <div class="col-12 mb-3">
+      <button class="btn btn-primary form-control" type="button" (click)="display=true">Display</button>
+    </div>
   </div>
 </div>
