--- a/14-angular-routing/src/app/component/contact/contact.component.html
+++ b/14-angular-routing/src/app/component/contact/contact.component.html
@@ -1,1 +1,7 @@
-<p>contact works!</p>
+<div class="row">
+  <div class="col-12">
+    <p class="display-1 text-center align-middle p-5">contact works!</p>
+  </div>
+</div>
+
+
