--- a/14-angular-routing/src/app/app.component.html
+++ b/14-angular-routing/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<main>
+  <app-header></app-header>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+  <app-footer></app-footer>
+</main>
+
+
