--- a/14-angular-routing/src/app/component/courses/courses.component.html
+++ b/14-angular-routing/src/app/component/courses/courses.component.html
@@ -1,1 +1,7 @@
-<p>courses works!</p>
+<div class="row">
+  <div class="col-12">
+    <p class="display-1 text-center align-middle p-5">courses works!</p>
+  </div>
+</div>
+
+
