--- a/14-angular-routing/src/app/component/about/about.component.html
+++ b/14-angular-routing/src/app/component/about/about.component.html
@@ -1,7 +1,51 @@
 <div class="row">
-  <div class="col-12">
-    <p class="display-1 text-center align-middle p-5">about works!</p>
+  <div class="col-12 text-center my-3">
+    <h1>About Us Page</h1>
+    <h2>Our Team</h2>
+    <button class="btn btn-dark" (click)="goToHome()">Go to Home Page</button>
   </div>
 </div>
+<div class="mb-5 pb-5">
+  <div class="row row-cols-1 g-0 justify-content-center">
 
+    <div class="card text-center me-1 mb-1" style="width:18rem;">
+      <img src="assets/images/team1.jpg" class="card-img-top">
+      <div class="card-body">
+        <h5 class="card-title">xxx</h5>
+        <p class="card-text">
+          xxx
+        </p>
+      </div>
+      <div class="card-body">
+        <a href="#" class="btn btn-dark mx-1">Contact</a>
+      </div>
+    </div>
 
+    <div class="card text-center me-1 mb-1" style="width:18rem;">
+      <img src="assets/images/team2.jpg" class="card-img-top">
+      <div class="card-body">
+        <h5 class="card-title">xxx</h5>
+        <p class="card-text">
+          xxx
+        </p>
+      </div>
+      <div class="card-body">
+        <a href="#" class="btn btn-dark mx-1">Contact</a>
+      </div>
+    </div>
+
+    <div class="card text-center me-1 mb-1" style="width:18rem;">
+      <img src="assets/images/team3.jpg" class="card-img-top">
+      <div class="card-body">
+        <h5 class="card-title">xxx</h5>
+        <p class="card-text">
+          xxx
+        </p>
+      </div>
+      <div class="card-body">
+        <a href="#" class="btn btn-dark mx-1">Contact</a>
+      </div>
+    </div>
+    </div>
+
+</div>
