--- a/14-angular-routing/src/app/component/header/header.component.html
+++ b/14-angular-routing/src/app/component/header/header.component.html
@@ -4,16 +4,22 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" [routerLink]="['home']">Home</a>
+            <a
+              class="nav-link"
+              aria-current="page"
+              [routerLink]="['/home']"
+              routerLinkActive="active"
+              [routerLinkActiveOptions]="{exact: true}"
+            >Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['about']">About</a>
+            <a class="nav-link" [routerLink]="['/about']" [routerLinkActive]="'active'">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['contact']">Contact</a>
+            <a class="nav-link" [routerLink]="['/contact']" [routerLinkActive]="'active'">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['courses']">Courses</a>
+            <a class="nav-link" [routerLink]="['/courses']" [routerLinkActive]="'active'">Courses</a>
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
