--- a/14-angular-routing/src/app/component/home/home.component.html
+++ b/14-angular-routing/src/app/component/home/home.component.html
@@ -1,7 +1,32 @@
 <div class="row">
   <div class="col-12">
-    <p class="display-1 text-center align-middle p-5">home works!</p>
+    <h2 class="text-center align-middle mt-3">Popular Courses</h2>
+    <hr style="border: #ccc 2px solid; margin: 5px 0px">
   </div>
 </div>
 
-
+<div class="mb-5 pb-5">
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 justify-content-center">
+    <ng-container *ngFor="let course of courses">
+      <div *ngIf="course.ratings >= 4.6">
+        <div class="card text-center">
+          <img [src]="course.image" class="card-img-top" style="height:140px;" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">{{course.name}}</h5>
+            <p class="card-text">
+              {{course.description}}
+            </p>
+            <p class="card-text fw-bold text-dark">
+              {{course.type}}
+            </p>
+          </div>
+          <div class="card-body">
+            <a href="#" class="btn btn-primary mx-1">Buy Now</a>
+            <a href="#" class="btn btn-primary">Show Details</a>
+          </div>
+        </div>
+      </div>
+    </ng-container>
+  </div>
+  <hr style="border: #ccc 2px solid; margin: 5px 0px">
+</div>
