--- a/14-angular-routing/src/app/component/about/about.component.html
+++ b/14-angular-routing/src/app/component/about/about.component.html
@@ -17,7 +17,7 @@
         </p>
       </div>
       <div class="card-body">
-        <a href="#" class="btn btn-dark mx-1">Contact</a>
+        <a style="cursor: pointer;" class="btn btn-dark mx-1">Contact</a>
       </div>
     </div>
 
@@ -30,7 +30,7 @@
         </p>
       </div>
       <div class="card-body">
-        <a href="#" class="btn btn-dark mx-1">Contact</a>
+        <a style="cursor: pointer;" class="btn btn-dark mx-1">Contact</a>
       </div>
     </div>
 
@@ -43,7 +43,7 @@
         </p>
       </div>
       <div class="card-body">
-        <a href="#" class="btn btn-dark mx-1">Contact</a>
+        <a style="cursor: pointer;" class="btn btn-dark mx-1">Contact</a>
       </div>
     </div>
     </div>
