--- a/14-angular-routing/src/app/component/course/course-list/course-list.component.html
+++ b/14-angular-routing/src/app/component/course/course-list/course-list.component.html
@@ -4,10 +4,8 @@
     <hr style="border: #ccc 2px solid; margin: 5px 0px">
   </div>
 </div>
-
 <div class="mb-5 pb-5">
   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-0 mx-5">
-
     <ng-container *ngFor="let course of courses">
       <div class="card text-center m-1" style="width: 18rem">
         <img [src]="course.image" class="card-img-top" style="height:140px;" alt="...">
@@ -21,8 +19,8 @@
           </p>
         </div>
         <div class="card-body">
-          <a href="#" class="btn btn-primary mx-1">Buy Now</a>
-          <a href="#" class="btn btn-primary" routerLink="/courses/{{course.id}}">Show Details</a>
+          <a style="cursor: pointer;" class="btn btn-primary mx-1">Buy Now</a>
+          <a style="cursor: pointer;" class="btn btn-primary" routerLink="/courses/{{course.id}}">Show Details</a>
         </div>
       </div>
     </ng-container>
