--- a/14-angular-routing/src/app/component/home/home.component.html
+++ b/14-angular-routing/src/app/component/home/home.component.html
@@ -4,7 +4,6 @@
     <hr style="border: #ccc 2px solid; margin: 5px 0px">
   </div>
 </div>
-
 <div class="mb-5 pb-5">
   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 justify-content-center">
     <ng-container *ngFor="let course of courses">
@@ -21,12 +20,16 @@
             </p>
           </div>
           <div class="card-body">
-            <a href="#" class="btn btn-primary mx-1">Buy Now</a>
-            <a href="#" class="btn btn-primary">Show Details</a>
+            <a style="cursor: pointer;" class="btn btn-primary mx-1">Buy Now</a>
+            <a style="cursor: pointer;" class="btn btn-primary">Show Details</a>
           </div>
         </div>
       </div>
     </ng-container>
   </div>
   <hr style="border: #ccc 2px solid; margin: 5px 0px">
+</div>
+
+<div class="spinner-border text-info loading text-center"  *ngIf="courses.length<=0">
+  <span class="visually-hidden">Loading...</span>
 </div>
