--- a/16-angular-template-driven-form/src/app/component/example1/example1.component.html
+++ b/16-angular-template-driven-form/src/app/component/example1/example1.component.html
@@ -11,11 +11,11 @@
           name="name"
           class="form-control"
           ngModel
-          #name="ngModel"
-          [ngClass]="{ 'is-invalid': name.invalid && name.touched }"
+          #_name="ngModel"
+          [ngClass]="{ 'is-invalid': (userForm.submitted && _name.invalid) || (_name.invalid && _name.touched) }"
           required>
-        <div class="invalid-feedback" *ngIf="name.invalid && name.touched">
-          <p *ngIf="name.errors['required']">Name is required</p>
+        <div class="invalid-feedback" *ngIf="_name.invalid" >
+          <div *ngIf="_name.errors['required']">Email is required</div>
         </div>
       </div>
 
@@ -26,13 +26,13 @@
           class="form-control"
           name="email"
           ngModel
-          #email="ngModel"
-          [ngClass]="{ 'is-invalid': userForm.submitted && email.invalid }"
+          #_email="ngModel"
+          [ngClass]="{ 'is-invalid':  (userForm.submitted && _email.invalid) || (_email.invalid && _email.touched)}"
           email
           required>
-        <div *ngIf="userForm.submitted && email.invalid" class="invalid-feedback">
-          <div *ngIf="email.errors['required']">Email is required</div>
-          <div *ngIf="email.errors['email']">Must be a valid email address</div>
+        <div *ngIf="_email.invalid" class="invalid-feedback">
+          <div *ngIf="_email.errors['required']">Email is required</div>
+          <div *ngIf="_email.errors['email']">Must be a valid email address</div>
         </div>
       </div>
 
@@ -43,13 +43,13 @@
           class="form-control"
           name="password"
           ngModel
-          #password="ngModel"
-          [ngClass]="{ 'is-invalid': userForm.submitted && password.invalid }"
+          #_password="ngModel"
+          [ngClass]="{ 'is-invalid': (userForm.submitted && _password.invalid) || (_password.invalid && _password.touched) }"
           minlength="8"
           required>
-        <div *ngIf="userForm.submitted && password.invalid" class="invalid-feedback">
-          <div *ngIf="password.errors['required']">Password is required</div>
-          <div *ngIf="password.errors['minlength']">Password should be at least 8 characters long</div>
+        <div *ngIf="_password.invalid" class="invalid-feedback">
+          <div *ngIf="_password.errors['required']">Password is required</div>
+          <div *ngIf="_password.errors['minlength']">Password should be at least 8 characters long</div>
         </div>
       </div>
 
@@ -60,19 +60,19 @@
           name="hobbies"
           ngModel
           #_hobbies="ngModel"
-          [ngClass]="{ 'is-invalid': _hobbies.invalid  && _hobbies.touched}"
+          [ngClass]="{ 'is-invalid': (userForm.submitted && _hobbies.invalid) || (_hobbies.invalid && _hobbies.touched)}"
           required>
           <option value="">Select an option</option>
           <option *ngFor="let hobby of hobbies" [value]="hobby">
             {{hobby}}
           </option>
         </select>
-        <div *ngIf="_hobbies.invalid && _hobbies.touched" class="invalid-feedback">
+        <div *ngIf="_hobbies.invalid" class="invalid-feedback">
           <div *ngIf="_hobbies.errors['required']">Hobby is required</div>
         </div>
       </div>
 
-      <div class="form-group mt-1">
+      <div class="form-group mt-3">
         <button class="btn btn-danger btn-block">Submit</button>
       </div>
     </form>
