--- a/9-angular-contentchild/src/app/components/parent/parent.component.html
+++ b/9-angular-contentchild/src/app/components/parent/parent.component.html
@@ -2,8 +2,8 @@
   <div class="col-12">
     <h2>This is Parent Component</h2>
     <app-child>
-      <p class="text-bg-primary">Defult paragraph</p>
-      <p class="text-bg-info" default>Info paragraph</p>
+      <p class="text-bg-primary">Default paragraph</p>
+      <p class="text-bg-info">Info paragraph</p>
       <p class="text-bg-danger" #paragraph paragraph>This is a paragraph</p>
     </app-child>
   </div>
