--- a/18-angular-pipes/src/app/app.component.html
+++ b/18-angular-pipes/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div class="container m-5">
-  <app-pipes></app-pipes>
+  <app-builtin-pipes></app-builtin-pipes>
+  <app-custom-pipes></app-custom-pipes>
 </div>
