--- a/18-angular-pipes/src/app/component/builtin-pipes/builtin-pipes.component.html
+++ b/18-angular-pipes/src/app/component/builtin-pipes/builtin-pipes.component.html
@@ -29,7 +29,7 @@
   <br>
   <br>
   <div class="btn-group">
-    <button class="btn btn-primary mx-1" (click)="addDummyStudent()">Add Student</button>
+    <button class="btn btn-primary me-1" (click)="addDummyStudent()">Add Student</button>
     <button class="btn btn-primary" (click)="changeGender()">Change Gender</button>
   </div>
 </div>
