--- a/18-angular-pipes/src/app/component/builtin-pipes/builtin-pipes.component.html
+++ b/18-angular-pipes/src/app/component/builtin-pipes/builtin-pipes.component.html
@@ -1,5 +1,8 @@
 <div class="row">
   <div class="col-12">
+    <div class="col-12 mt-3 text-center">
+      <h1 style="color: brown">Built-in Pipes Example 1</h1>
+    </div>
     <table class="table table-light">
       <thead>
       <tr class="table-dark">
