--- a/13-angular-observables/src/app/component/subject-eg1/subject-eg1.component.html
+++ b/13-angular-observables/src/app/component/subject-eg1/subject-eg1.component.html
@@ -1,6 +1,6 @@
-<div class="row mt-3">
+<div class="row mt-5">
   <h1 class="text-center">
-    Example 4 :: <span class="text-muted display-6">Subject</span>
+    Subject :: <span class="text-muted display-6">Subject</span>
   </h1>
   <div class="form-group">
     <label for="inputMessage">Message</label>
@@ -8,4 +8,3 @@
     <button class="form-control btn bg-primary" (click)="onClick()" >Click</button>
   </div>
 </div>
-
