--- a/19-angular-http-firebase/src/app/component/product-list/product-list.component.html
+++ b/19-angular-http-firebase/src/app/component/product-list/product-list.component.html
@@ -11,7 +11,7 @@
 <!--      >-->
     </div>
     <div>
-      <h3>Total Students: {{ productList.length }}</h3>
+<!--      <h3 >Total Students: {{ productList.length }}</h3>-->
     </div>
     <table class="table table-light">
       <thead>
@@ -48,9 +48,8 @@
       </ng-container>
       </tbody>
     </table>
-    <hr>
     <div>
-<!--      <button class="btn-fetch" (click)="onFetch()">Fetch</button>-->
+      <button class="btn btn-primary" (click)="onFetch()">Fetch</button>
 <!--      <button class="btn-clear" (click)="onDeleteAllProducts()">Clear Product</button>-->
     </div>
   </div>
